Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <p><strong>Laravel 3 on crash-diet!</strong></p>
 
-<p><img src="http://i.imgur.com/O8tej.jpg" alt=""></p>
+<p><img src="http://i.imgur.com/AoLUu.jpg" alt=""></p>
 
 <p>To improve performance of web applications, many developers utilize PHP op-code caching libraries such as APC, XCache and eAccelerator.</p>
 
