Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       <section id="main_content">
         <h1>diet-laravel-3</h1>
 
-<p><strong>Laravel 3 on crash-diet!</strong></p>
+<h4>Laravel 3 on crash-diet!</h4>
 
 <p><img src="http://i.imgur.com/AoLUu.jpg" alt=""></p>
 
-<p>To improve performance of web applications, many developers utilize PHP op-code caching libraries such as APC, XCache and eAccelerator.</p>
+<p>To improve performance of web applications, many developers utilize PHP op-code caching extensions such as APC, XCache and eAccelerator.</p>
 
 <p>When op-code caching is enabled, you can replace the traditional <code>laravel.php</code> with a different Laravel bootstrap file named <code>laravel_boot.php</code> (which acts as a wrapper around <code>laravel_lite.php</code>) to further boost the performance of your application.</p>
 
